<resources>
    <string name="app_name" translatable="false">Keepest</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_add_dictionary">Add word list</string>
    <string name="nav_load_dictionary">Load list</string>
    <string name="nav_quiz_mode">Quiz mode</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_send_feedback">Contact</string>
    <string name="nav_default_dictionary">default list</string>
    <string name="action_find">Sort</string>
    <string name="nav_manage_dictionaries">Lists</string>
    <string name="nav_sign_in">Sign in</string>
    <string name="nav_words">Words</string>
    <string name="sign_up">Sign up</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="save">Save</string>
    <string name="dictionaries_title">Word lists</string>
    <string name="backup_file_created">Backup file created:</string>
    <string name="from">from</string>
    <string name="export_dictionary">Export word list</string>
    <string name="there_are_no_email_clients">There are no email clients installed.</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="close">Close</string>
    <string name="login">Sign in</string>
    <string name="empty_email_or_password">Empty email or password.</string>
    <string name="settings_title">Settings</string>
    <string name="words_title">Words</string>
    <string name="feedback_from_user">Feedback from user</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="export_all">Export All</string>
    <string name="import_file">Import File</string>
    <string name="verify_your_email">Check your inbox and verify your email before signing in.</string>
    <string name="backup_upload_failure">Backup upload failure</string>
    <string name="backup_upload_complete">Backup upload complete</string>
    <string name="backup_file_downloaded">Backup file imported</string>
    <string name="backup_download_failure">Backup download failure</string>
    <string name="password">password</string>
    <string name="login_failed">Signing in failed</string>
    <string name="logged_as">"Signed in as "</string>
    <string name="sign_in_summary">Get access to cloud backup storage.</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="you_are_not_logged_in">You are not signed in</string>
    <string name="send_backup_confirmation">Do you want to send your data to cloud?</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="download_backup_confirmation">Do you want to download your data from Google Drive?</string>
    <string name="wait_before_next_download">Wait %d seconds before next download</string>
    <string name="wait_before_next_upload">Wait %d seconds before next upload.</string>
    <string name="uploading_to_cloud_progress">Uploading data to cloud</string>
    <string name="downloading_from_cloud_progress">Downloading from Google Drive</string>
    <string name="singning_in_progress">Signing in</string>
    <string name="singning_up_progress">Signing up</string>
    <string name="dictionaries_imported">Words imported.</string>
    <string name="error_importing_dictionary">Error importing dictionary</string>
    <string name="importing_dictionaries_progress">Importing words</string>
    <string name="exporting_dictionaries_progress">Exporting words</string>
    <string name="no_write_permission">Export failed. No write permission.</string>
    <string name="create_first_dictionary">Create Word List</string>
    <string name="dictionary_name_hint">List name</string>
    <string name="bt_dict_open">Open</string>
    <string name="dict_delete_dialog">Delete</string>
    <string name="error_importing_dictionary_timeout">Sql insert timeout. Import failed</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="cache_size">"Cache size: %.2f megabytes"</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="confirm_deletion_of">"Confirm deletion of "</string>
    <string name="learning_mode">Learning mode</string>
    <string name="advanced">Extra</string>
    <string name="translate">Translate</string>
    <string name="yes">yes</string>
    <string name="remove_tag_question">Do you want to remove tag:</string>
    <string name="you_have_0_dictionaries">Create word list. Enter name and choose languages.</string>
    <string name="next">Next</string>
    <string name="nav_night_mode">Night mode ON/OFF</string>
    <string name="tutorial_edit_export_or_delete_dictionary">Edit, export or delete word list.</string>
    <string name="tutorial_type_dictionary_name_and_choose_languages">Type word list name  and choose languages</string>
    <string name="tutorial_translate_word">Translate word.</string>
    <string name="tutorial_swipe_left_card">Swipe left or touch card to open menu. Touch speaker to listen.</string>
    <string name="turorial_restart_session">Restart session.</string>
    <string name="tutorial_end_session">End session.</string>
    <string name="tutorial_add_tags_notes">Add #tags and notes to the word.</string>
    <string name="tutorial_add_new_word">Add new word.</string>
    <string name="tutorial_star_edit_delete_word">Highlight, edit or delete word.</string>
    <string name="tag_name">Tag name</string>
    <string name="your_email_com">your@email.com</string>
    <string name="confirm_password">Confirm password</string>
    <string name="filename">File</string>
    <string name="choose_export_method">Choose export method</string>
    <string name="flashcard">Card</string>
    <string name="correct">Correct:</string>
    <string name="wrong">Wrong:</string>
    <string name="score">Score:</string>
    <string name="_0_percent" translatable="false">0 %</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="start_session">Start session</string>
    <string name="word">Word</string>
    <string name="translation">Translation</string>
    <string name="notes">Notes</string>
    <string name="tags">TAGS</string>
    <string name="enter_word">enter word</string>
    <string name="enter_translation">enter translation</string>
    <string name="already_exists">Already Exists</string>
    <string name="dictionary_name">list_name</string>
    <string name="import_dictionary_from_file">Import words from file</string>
    <string name="new_">New</string>
    <string name="to">To</string>
    <string name="tag">Tag</string>
    <string name="select_all">Select All</string>
    <string name="search">Search</string>
    <string name="backup_keep">backup</string>
    <string name="unknown">unknown</string>
    <string name="choose_tags">Choose tags.</string>
    <string name="choose_dictionaries">Choose lists</string>
    <string name="zero_words_found">0 words found</string>
    <string name="choose_number_of_questions">Choose number of questions.</string>
    <string name="not_signed">Not signed</string>
    <string name="permissions">Permissions</string>
    <string name="grant_acces_dialog">Grant access to read/write SD storage to enable Import/Export functionality.</string>
    <string name="dictionaries_tab">Word lists</string>
    <string name="notes_tab">Notes</string>
    <string name="tags_tab">#Tags</string>
    <string name="edit_tag">Edit #TAG</string>
    <string name="tag_laready_exists">Tag already exist.</string>
    <string name="empty_fields_not_allowed">Empty fields not allowed</string>
    <string name="sing_out">Sign out</string>
    <string name="cloud_backup">Google Drive backup</string>
    <string name="send_to_cloud">Send to Google Drive</string>
    <string name="send_to_cloud_summary">Keep copy of your word lists safe in Google Drive.</string>
    <string name="download_from_cloud_summary">Retrieve your word lists from Google Drive. Supported files: *.keep, *.csv (word, word, tags, notes)</string>
    <string name="cache_summary">Keepest caches sounds to reduce internet usage. Cached sounds can be played offline.</string>
    <string name="show_cache">Show Cache</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="download_from_cloud">Download from Google Drive</string>
    <string name="accounts">Accounts</string>
    <string name="learning">Learning</string>
    <string name="nav_rate_app">Rate this app</string>
    <string name="unable_to_find_playstore">Unable to open PlayStore.</string>
    <string name="grant_acces_dialog_gdrive">Grant access to enable Google Drive backup functionality.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="gdrive_error_create_file">Error while trying to create new file contents</string>
    <string name="gdrive_upload_success">File uploaded:</string>
    <string name="about">About</string>
    <string name="edit">Edit</string>
    <string name="search_in_english">Search in english</string>
    <string name="show_gif">Show GIF</string>
    <string name="connecting_to_gdrive">Connecting to Google Drive...</string>
    <string name="cache_title">Cache</string>
    <string name="cache_settings">Cache Settings</string>
    <string name="enter_word_tut">Enter word for translation</string>
    <string name="tut_translate_word">Touch this button to translate the word you entered.</string>
    <string name="dictionary">"List "</string>
    <string name="loaded">" loaded!"</string>
    <string name="edit_word">Edit word</string>
    <string name="add_word">Add word</string>
    <string name="read_answers">Read Answer</string>
    <string name="app_version">Version</string>
    <string name="swipe_left_to_open_menu">Swipe left to open menu</string>
    <string name="email">Send</string>
</resources>