<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Jacek Markowski
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction,
  ~ including without limitation the rights to use, copy, modify, merge, publish, distribute,
  ~ sublicense,  and/or sell copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or
  ~ substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_storage"
        android:layout="@layout/preference_category"
        android:title="@string/cloud_backup">
        <Preference
            android:icon="@drawable/ic_cloud_upload"
            android:key="pref_send"
            android:summary="@string/send_to_cloud_summary"
            android:title="@string/send_to_cloud"/>
        <Preference
            android:icon="@drawable/ic_cloud_download"
            android:key="pref_download"
            android:summary="@string/download_from_cloud_summary"
            android:title="@string/download_from_cloud"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/cache_title">
        <PreferenceScreen
            android:icon="@drawable/ico_file_music"
            android:key="pref_cache_screen"
            android:persistent="false"
            android:summary="@string/cache_summary"
            android:title="@string/show_cache">
            <PreferenceCategory android:title="@string/cache_settings">
                <Preference
                    android:icon="@drawable/ic_delete"
                    android:key="pref_clear_cache"
                    android:title="@string/clear_cache"/>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/about">
        <PreferenceScreen
            android:key="pref_contributors"
            android:persistent="true"
            android:title="@string/contributors">
            <PreferenceCategory android:title="@string/translations">
                <Preference
                    android:key="pref_icelandic"
                    android:title="@string/portuguese_2018"
                    android:summary="@string/contributor_portuguese_2018"/>
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="pref_privacy_policy"
            android:persistent="false"
            android:title="@string/privacy_policy">
        </PreferenceScreen>
        <PreferenceScreen
            android:key="pref_source_code"
            android:persistent="false"
            android:title="@string/source_code">
        </PreferenceScreen>
        <PreferenceScreen
            android:key="pref_version"
            android:persistent="false"
            android:title="@string/app_version">
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>