<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018 Jacek Markowski
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction,
  ~ including without limitation the rights to use, copy, modify, merge, publish, distribute,
  ~ sublicense,  and/or sell copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or
  ~ substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  ~
  -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false">

    <android.support.v7.widget.CardView
        android:id="@+id/card_dictionary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="4dp">

            <TextView
                android:id="@+id/tv_dict_name_hidden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:paddingRight="8dp"
                android:text="@string/dictionary_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left|end"
            android:animateLayoutChanges="false">

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:clipToPadding="false">


                <TextView
                    android:id="@+id/tv_is_dict_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="6dp"
                    android:text="@string/new_"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_dictionary"
                    app:layout_constraintLeft_toRightOf="@+id/tv_dictionary"/>

                <TextView
                    android:id="@+id/tv_speak_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/from"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_dictionary"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dictionary"/>

                <TextView
                    android:id="@+id/tv_dictionary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/dictionary_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tv_speak_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/to"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@+id/tv_speak_from"
                    app:layout_constraintTop_toTopOf="@+id/tv_speak_from"/>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
